# anki_generator

./: .gitignore  README.md  cli.py  crawler.py  csv_processor.py  database.py  pyproject.toml  renderer.py
data/: LeetCode.apkg  LeetCode.sqlite
templates/: back-side.html
