[tool.poetry]
name = "anki-generator"
version = "0.1.0"
description = ""
authors = ["Hung Pham"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
selenium = "^4.28.1"
peewee = "^3.17.9"
genanki = "^0.13.1"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
